# deepagents_vs_claude_agent_sdk

./: .gitignore  README.md  benchmark_agents.py  benchmark_results.json  example.env  main.py  notebook.ipynb  pyproject.toml
agents/: claudeagent.py  deepagent.py  main.py
