[project]
name = "cluade-agent-sdk-vs-langchain-deepagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "deepagents>=0.4.9",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "matplotlib>=3.10.8",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
